--- a/index.html
+++ b/index.html
@@ -1,25 +1,50 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game</title>
     <link rel="stylesheet" href="./styles/styles.css">
+    <script src="./scripts/render-game-screen.js"></script>
 </head>
+
 <body>
     <section class="block-choose-difficulty">
         <div class="block-heading-difficulty">
             <h1 class="heading-choose-difficulty">Выбери сложность</h1>
         </div>
-            <div class="buttons-difficulty">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-            </div>
-            <div class="block-button-start">
-                <button class="button-start">Старт</button>
-            </div>
+        <div class="buttons-difficulty">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+        </div>
+        <div class="block-button-start">
+            <button class="button-start">Старт</button>
+        </div>
     </section>
+    <script>
+        const Game = {
+            rememberLevel,
+            renderGameScreen,
+            // renderChosenCards,
+            // renderTimeGame,
+            // renderCards
+        }
+
+        const blockButtonsDifficulty = document.querySelector('.buttons-difficulty');
+        const buttonStartGame = document.querySelector('.button-start');
+
+        function rememberLevel() {
+            blockButtonsDifficulty.addEventListener('click', function chooseLevel(event) {
+                localStorage.setItem('level', `${event.target.textContent}`);
+            })
+
+            buttonStartGame.addEventListener('click', renderGameScreen);
+        }
+
+        document.addEventListener('DOMContentLoaded', rememberLevel);
+    </script>
 </body>
 </html>
