last-screens-added

--- a/src/index.html
+++ b/src/index.html
@@ -36,5 +36,16 @@
         </div>
 
         <div class="block-with-cards"></div>
+        <div class="block-final-screen block-final-screen-hidden">
+            <img class="block-final-screen__icon" src="" alt="" />
+            <section class="block-final-screen__content">
+                <h2 class="block-final-screen__heading"></h2>
+                <div class="block-final-screen__time">Затраченное время:</div>
+                <div class="block-final-screen__time-content"></div>
+                <button class="block-final-screen_button button-start-again">
+                    Играть снова
+                </button>
+            </section>
+        </div>
     </body>
 </html>
