--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Card-game">
         <title>Game</title>
+        <link rel="icon" type="image/ico" href="./images/favicon.ico" sizes="32x32">
     </head>
 
     <body>
